Fix alignment

--- a/src/styles/FooterBanner.module.css
+++ b/src/styles/FooterBanner.module.css
@@ -8,6 +8,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  max-width: 1350px;
+  margin-inline: auto;
   padding: 50px 80px;
 
   position: relative;
